--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.formContainer{
+  margin: 1em auto;
+  display: flex;
+  justify-content: space-evenly;
+}
